cabal-version:      1.12

name:               throttled
version:            1.1.0
synopsis:
  Concurrent processing of a Foldable, throttled by CPU count.

description:
  Concurrent processing of a Foldable, throttled by CPU count. You must compile your executable with @-threaded@ to see any effect.

category:           Concurrency
homepage:           https://github.com/fosskers/throttled
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2018 Colin Woodbury
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  Control.Concurrent.Throttled
  ghc-options:
    -Widentities -Wincomplete-patterns -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists -Wname-shadowing
    -Wpartial-fields -Wredundant-constraints -Wunused-binds
    -Wunused-imports -Wunused-matches

  build-depends:
      async  >=2.2 && <2.3
    , base   >=4.7 && <5
    , stm
